<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.remsfal</groupId>
    <artifactId>remsfal-backend</artifactId>
    <version>1.0.11-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>remsfal - Backend</name>

    <modules>
        <module>remsfal-core</module>
        <module>remsfal-gaeb</module>
        <module>remsfal-services</module>
        <module>wrap-up</module>
    </modules>

    <properties>
        <resources-plugin.version>3.4.0</resources-plugin.version>
        <dependency-plugin.version>3.9.0</dependency-plugin.version>
        <compiler-plugin.version>3.14.1</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.style.configDirectory>src/main/style</project.style.configDirectory>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>
        <failsafe-plugin.version>3.5.4</failsafe-plugin.version>
        <checkstyle-plugin.version>3.6.0</checkstyle-plugin.version>
        <release-plugin.version>3.3.1</release-plugin.version>
        <scm-plugin.version>2.2.1</scm-plugin.version>
        <deploy-plugin.version>3.1.4</deploy-plugin.version>
        <help-plugin.version>3.5.1</help-plugin.version>
        <jandex-plugin.version>3.5.3</jandex-plugin.version>
        <jacoco-plugin.version>0.8.14</jacoco-plugin.version>
        <sonar-plugin.version>5.5.0.6356</sonar-plugin.version>
        <sonar.organization>remsfal</sonar.organization>
        <sonar.projectKey>remsfal_remsfal-backend</sonar.projectKey>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.coverage.jacoco.xmlReportPaths>
            ${maven.multiModuleProjectDirectory}/target/site/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <sonar.java.checkstyle.reportPaths>
            ${maven.multiModuleProjectDirectory}/target/checkstyle-result.xml
        </sonar.java.checkstyle.reportPaths>
        <sonar.coverage.exclusions>
            **/de/remsfal/test/**
        </sonar.coverage.exclusions>
        <sonar.cpd.exclusions>
            **/de/remsfal/service/entity/dto/**
        </sonar.cpd.exclusions>
    </properties>

    <scm>
        <connection>scm:git:https://github.com/remsfal/remsfal-backend.git</connection>
        <developerConnection>scm:git:https://github.com/remsfal/remsfal-backend.git</developerConnection>
        <url>https://github.com/remsfal/remsfal-backend</url>
      <tag>HEAD</tag>
  </scm>
    
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/remsfal/remsfal-backend/issues</url>
    </issueManagement>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub REMSFAL Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/remsfal/remsfal-backend</url>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${dependency-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                            <arg>-proc:full</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
                        <trimStackTrace>false</trimStackTrace>
                        <systemPropertyVariables>
                            <java.util.logging.manager>
                                org.jboss.logmanager.LogManager
                            </java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                            <quarkus.jacoco.data-file>
                                ${project.build.directory}/site/jacoco/jacoco.exec
                            </quarkus.jacoco.data-file>
                            <quarkus.jacoco.reuse-data-file>true</quarkus.jacoco.reuse-data-file>
                            <quarkus.jacoco.report-location>
                                ${project.build.directory}/site/jacoco
                            </quarkus.jacoco.report-location>
                        </systemPropertyVariables>
                        <!-- includes>
                            <include>**/boundary/**</include>
                        </includes -->
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${failsafe-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                            <configuration>
                                <systemPropertyVariables>
                                    <native.image.path>
                                        ${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                                    <java.util.logging.manager>
                                        org.jboss.logmanager.LogManager
                                    </java.util.logging.manager>
                                    <maven.home>${maven.home}</maven.home>
                                </systemPropertyVariables>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${checkstyle-plugin.version}</version>
                    <configuration>
                        <configLocation>${project.style.configDirectory}/checkstyle.xml</configLocation>
                        <excludeGeneratedSources>true</excludeGeneratedSources>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <linkXRef>false</linkXRef>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${release-plugin.version}</version>
                    <configuration>
                        <tagNameFormat>v@{project.version}</tagNameFormat>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-scm-plugin</artifactId>
                    <version>${scm-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${deploy-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-help-plugin</artifactId>
                    <version>${help-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.smallrye</groupId>
                    <artifactId>jandex-maven-plugin</artifactId>
                    <version>${jandex-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
